--- a/index.html
+++ b/index.html
@@ -4,10 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign-up</title>
+    <title>Scouting Legion</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <aside>
+        <div id="logo">
+            <img src="scouts-logo.png" alt="">
+            <h1>Scouting Legion</h1>
+        </div>
+    </aside>
+    <main>
+        <div id="motto">
+            <h3>"It's Us Who Gives Meaning To Our Comrades' Lives!"</h3>
+            <p>- Erwin Smith</p>
+            <img src="erwin_smith.png" alt="">
+        </div>
+        <p>This day has come! Today this is your chance to join brave soldiers
+             fighting titans outside the walls! Give your hearts!</p>
+        <p>Sign up now and get a free cloak!</p>
+        <form action="">
+            <div>
+                <label for="first_name">FIRST NAME</label>
+                <input type="text" name="first_name" id="first_name">
+            </div>
+            <div>
+                <label for="last_name">LAST NAME</label>
+                <input type="text" name="last_name" id="last_name">
+            </div>
+            <div>
+                <label for="email">EMAIL</label>
+                <input type="email" name="email" id="email">
+            </div>
+            <div>
+                <label for="phone_number">PHONE NUMBER</label>
+                <input type="number" name="phone_number" id="phone_number">
+            </div>
+            <div>
+                <label for="password">PASSWORD</label>
+                <input type="password" name="password" id="password">
+            </div>
+            <div>
+                <label for="confirm_password">CONFIRM PASSWORD</label>
+                <input type="password" name="confirm_password" id="confirm_password">
+            </div>
+            <button type="submit">Create Account</button>
+        </form>
+        <p>Already have an account? <a id="log-in">Log in</a></p>
+    </main>
 </body>
 </html>
