Add basic style

--- a/index.html
+++ b/index.html
@@ -9,42 +9,44 @@
 </head>
 <body>
     <aside>
-        <div id="logo">
-            <img src="scouts-logo.png" alt="">
+        <div id="header">
+            <img src="scouts-logo.png" id="logo">
             <h1>Scouting Legion</h1>
         </div>
     </aside>
     <main>
         <div id="motto">
-            <h3>"It's Us Who Gives Meaning To Our Comrades' Lives!"</h3>
-            <p>- Erwin Smith</p>
-            <img src="erwin_smith.png" alt="">
+            <div id="quote">
+                <h3><em>"It's Us Who Gives Meaning To Our Comrades' Lives! Never forget this!"</em></h3>
+                <p>- Erwin Smith</p>
+            </div>
+            <img src="erwin_smith.png" id="erwin-img">
         </div>
-        <p>This day has come! Today this is your chance to join brave soldiers
-             fighting titans outside the walls! Give your hearts!</p>
-        <p>Sign up now and get a free cloak!</p>
+        <p>All these years you've been learning to fight evil and finally this day has come! Today this is your chance to join brave soldiers
+             fighting titans outside the walls! You are needed a lot! Save the humanity! ADVANCE! GIVE YOUR HEART!</p>
+        <p>Sign up now and get a FREE CLOAK!</p>
         <form action="">
-            <div>
+            <div class="input">
                 <label for="first_name">FIRST NAME</label>
                 <input type="text" name="first_name" id="first_name">
             </div>
-            <div>
+            <div class="input">
                 <label for="last_name">LAST NAME</label>
                 <input type="text" name="last_name" id="last_name">
             </div>
-            <div>
+            <div class="input">
                 <label for="email">EMAIL</label>
                 <input type="email" name="email" id="email">
             </div>
-            <div>
+            <div class="input">
                 <label for="phone_number">PHONE NUMBER</label>
-                <input type="number" name="phone_number" id="phone_number">
+                <input type="text" name="phone_number" id="phone_number">
             </div>
-            <div>
+            <div class="input">
                 <label for="password">PASSWORD</label>
                 <input type="password" name="password" id="password">
             </div>
-            <div>
+            <div class="input">
                 <label for="confirm_password">CONFIRM PASSWORD</label>
                 <input type="password" name="confirm_password" id="confirm_password">
             </div>
