Add a bit more style

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         <form action="">
             <div class="input">
                 <label for="first_name">FIRST NAME</label>
-                <input type="text" name="first_name" id="first_name">
+                <input type="text" name="first_name" id="first_name" required>
             </div>
             <div class="input">
                 <label for="last_name">LAST NAME</label>
-                <input type="text" name="last_name" id="last_name">
+                <input type="text" name="last_name" id="last_name" required>
             </div>
             <div class="input">
                 <label for="email">EMAIL</label>
-                <input type="email" name="email" id="email">
+                <input type="email" name="email" id="email" required>
             </div>
             <div class="input">
                 <label for="phone_number">PHONE NUMBER</label>
@@ -44,15 +44,15 @@
             </div>
             <div class="input">
                 <label for="password">PASSWORD</label>
-                <input type="password" name="password" id="password">
+                <input type="password" name="password" id="password" required>
             </div>
             <div class="input">
                 <label for="confirm_password">CONFIRM PASSWORD</label>
-                <input type="password" name="confirm_password" id="confirm_password">
+                <input type="password" name="confirm_password" id="confirm_password" required>
             </div>
             <button type="submit">Create Account</button>
         </form>
-        <p>Already have an account? <a id="log-in">Log in</a></p>
+        <p>Already have an account? <a href="" id="log-in">Log in</a></p>
     </main>
 </body>
 </html>
